# VHSh

./: .gitignore  README.md  example.py  fractal.py  mandelbrot.glsl  mic.py  plasma.glsl  pyproject.toml  requirements.txt  schwurbel.glsl  test.glsl  triangle.py  vhsh.py  vhshaderboi.py  viewer.py
midi_mappings/: korg_nanoKONTROL2.nktrl2_data  korg_nanoKONTROL2.toml
scenes/: mandelbrot.glsl  uniformtest.glsl
vhsh/: __init__.py  __main__.py  common.py  gl_types.py  gui.py  microphone.py  midi.py  renderer.py  scene.py  shader.py  types.py  window.py
